fixed padding on menu bar

--- a/css/page.css
+++ b/css/page.css
@@ -52,7 +52,9 @@ nav a{
     background-color: lightgrey;
     margin-top: 0;
     height: 100%;
+    padding-left: 0;
 }
+
 .link>li{
     padding: 1em;
 }
