--- a/css/page.css
+++ b/css/page.css
@@ -110,6 +110,7 @@ nav a{
     justify-content: center;
     vertical-align: middle;
     line-height: 6em;
+
 }
 .ADV2{
     width: 90%;
@@ -156,8 +157,27 @@ nav a{
 .number a:hover{
     background-color: black;
     color: white;
+
 }
 
-.next-margin{
-    margin-right: 6em;
+.span{
+    display: flex;
+    margin-right: 5em;
+}
+h1 {
+    color: rgb(16, 150, 137);
+    font-size: 4em;
+    padding-top: 0;
+    margin: 0;
+}
+img{
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
+}
+@media screen and( min-width: 500px){
+    body{
+        background: red;
+    }
+
 }
